Fixes required for Javadocs